# text_file_reads_write

./: README.md  pyproject.toml
text_file_reads_write/: 文本文件批量读取器.py
